--- a/nginx/conf.d/nginx.conf
+++ b/nginx/conf.d/nginx.conf
@@ -21,18 +21,27 @@ server {
 
 
 server {
+    
+    listen              443 ssl;
     listen 80;
+    listen [::]:80;
     server_name keycloak.runhare.org;
+
+    ssl_certificate     /etc/letsencrypt/live/keycloak.runhare.org/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/keycloak.runhare.org/privkey.pem;
+
+
     location / {
         if ($http_x_forwarded_proto != 'https') {
             return 301 https://$server_name$request_uri;
         }
-    access_log  /var/logs/keycloak.log main;
-    error_log   /var/logs/keycloak.log error;
-    proxy_set_header Host $http_host;
-    proxy_set_header X-Forward-Proto https;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_pass http://localhost:8080;
+
+        access_log  /var/logs/keycloak.log main;
+        error_log   /var/logs/keycloak.log error;
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Forward-Proto https;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_pass http://localhost:8080;
     }
 }
 
