--- a/nginx/conf.d/nginx.conf
+++ b/nginx/conf.d/nginx.conf
@@ -1,6 +1,6 @@
 upstream runhare_site {
      ip_hash;
-    server web:8000;
+    server web:8080;
 }
 
 
@@ -45,6 +45,6 @@ server {
         proxy_set_header Host $http_host;
         proxy_set_header X-Forward-Proto https;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_pass http://localhost:8080;
+        proxy_pass http://runhare_site;
     }
 }
