--- a/nginx/conf.d/nginx.conf
+++ b/nginx/conf.d/nginx.conf
@@ -1,9 +1,3 @@
-upstream runhare_site {
-     ip_hash;
-    server web:8080;
-}
-
-
 server {
     listen 80;
     listen [::]:80;
@@ -45,6 +39,6 @@ server {
         proxy_set_header Host $http_host;
         proxy_set_header X-Forward-Proto https;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_pass http://runhare_site;
+        proxy_pass http://localhost:8080;
     }
 }
