--- a/nginx/conf.d/nginx.conf
+++ b/nginx/conf.d/nginx.conf
@@ -33,6 +33,7 @@ server {
         proxy_set_header Host $http_host;
         proxy_set_header X-Forward-Proto https;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_redirect off;
         proxy_pass http://localhost:8080;
     }
 }
