--- a/nginx/conf.d/nginx.conf
+++ b/nginx/conf.d/nginx.conf
@@ -1,3 +1,9 @@
+upstream keycloak_site {
+     ip_hash;
+    server keycloak:8080;
+}
+
+
 server {
     listen 80;
     listen [::]:80;
@@ -30,10 +36,10 @@ server {
     }
 
     location / {
-        proxy_set_header Host $http_host;
+        proxy_set_header Host $host;
         proxy_set_header X-Forward-Proto https;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_redirect off;
-        proxy_pass http://localhost:8080;
+        proxy_pass http://keycloak_site;
     }
 }
