--- a/nginx/conf.d/nginx.conf
+++ b/nginx/conf.d/nginx.conf
@@ -36,7 +36,12 @@ server {
     }
 
     location / {
-        proxy_set_header Host $host;
+
+        if ($http_x_forwarded_proto != 'https') {
+            return 301 https://$server_name$request_uri;
+        }
+
+        proxy_set_header Host $http_host;
         proxy_set_header X-Forward-Proto https;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_redirect off;
