--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
           KC_DB_PASSWORD: nRXCAHD3vunQNR
           KC_DB_SCHEMA: public
   #Hostname Configuration
-          # KC_HOSTNAME: "keycloak.runhare.org"
+          KC_HOSTNAME: "keycloak.runhare.org"
           # KC_HOSTNAME_STRICT_HTTPS: 'true'
   #Admin Credentials
           KEYCLOAK_USER: admin
